Page MenuHome GnuPG

AIX & GCC 4.7.4: 27 of 30 tests failed Please report to http://bugs.gnupg.org
Closed, ResolvedPublic

Description

Open to suggestions on what to check.
FYI: no problems with make check of gnupg-1.4.18

root@x065:[/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0]make check
Making check in m4
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/m4'
make[1]: Nothing to be done for `check'.
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/m4'
Making check in gl
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/gl'
make check-am
make[2]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/gl'
make[2]: Nothing to be done for `check-am'.
make[2]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/gl'
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/gl'
Making check in common
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/common'
make check-am
make[2]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/common'
make check-TESTS
make[3]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/common'
PASS: t-stringhelp
PASS: t-timestuff
PASS: t-convert
PASS: t-percent
PASS: t-gettime
PASS: t-sysutils
PASS: t-sexputil
Known envvars: GPG_TTY(ttyname) TERM(ttytype) DISPLAY(display)
XAUTHORITY(xauthority) XMODIFIERS GTK_IM_MODULE QT_IM_MODULE
PINENTRY_USER_DATA(pinentry-user-data)
PASS: t-session-env
PASS: t-openpgp-oid
PASS: t-ssh-utils
CERT lookup on 'simon.josefsson.org'
Key found (33162 bytes)
PASS: t-dns-cert
PASS: t-mapstrings
PASS: t-zb32
max. file descriptors: 20
open file descriptors: 3

PASS: t-exechelp

All 14 tests passed

make[3]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/common'
make[2]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/common'
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/common'
Making check in kbx
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/kbx'
make[1]: Nothing to be done for `check'.
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/kbx'
Making check in g10
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/g10'
make check-TESTS
make[2]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/g10'

PASS: t-rmd160

1 test passed

make[2]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/g10'
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/g10'
Making check in sm
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/sm'
make[1]: Nothing to be done for `check'.
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/sm'
Making check in agent
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/agent'
make check-TESTS
make[2]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/agent'

PASS: t-protect

1 test passed

make[2]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/agent'
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/agent'
Making check in scd
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/scd'
make[1]: Nothing to be done for `check'.
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/scd'
Making check in g13
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/g13'
make[1]: Nothing to be done for `check'.
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/g13'
Making check in dirmngr
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/dirmngr'
make check-am
make[2]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/dirmngr'
make[2]: Nothing to be done for `check-am'.
make[2]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/dirmngr'
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/dirmngr'
Making check in tools
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tools'
make[1]: Nothing to be done for `check'.
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tools'
Making check in po
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/po'
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/po'
Making check in doc
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/doc'
make check-am
make[2]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/doc'
make[2]: Nothing to be done for `check-am'.
make[2]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/doc'
make[1]: Leaving directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/doc'
Making check in tests
make[1]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests'
Making check in openpgp
make[2]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp'
make check-TESTS
make[3]: Entering directory `/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp'
version.test: starting the gpg-agent failed
FAIL: version.test
Hash algorithm MD5 is not installed (not an error)
PASS: mds.test
FAIL: decrypt.test
FAIL: decrypt-dsa.test
FAIL: sigs.test
FAIL: sigs-dsa.test
FAIL: encrypt.test
FAIL: encrypt-dsa.test
FAIL: seat.test
FAIL: clearsig.test
FAIL: encryptp.test
FAIL: detach.test
FAIL: armsigs.test
FAIL: armencrypt.test
FAIL: armencryptp.test
FAIL: signencrypt.test
FAIL: signencrypt-dsa.test
FAIL: armsignencrypt.test
FAIL: armdetach.test
FAIL: armdetachm.test
FAIL: detachm.test
FAIL: genkey1024.test
FAIL: conventional.test

> IDEA FAIL: conventional-mdc.test

multisig.test: valid is invalid (sig_sl_valid)
FAIL: multisig.test
verify.test: verify of msg_ols_asc failed
verify.test: verify of msg_cols_asc failed
verify.test: verify of msg_sl_asc failed
verify.test: verify of msg_olsols_asc_multiple failed
verify.test: verify of msg_oolss_asc failed
verify.test: verify of msg_cls_asc failed
verify.test: verify of msg_clss_asc failed
verify.test: verify of msg_clsclss_asc_multiple failed
FAIL: verify.test
armor.test: bug#1179 is back in town
FAIL: armor.test
PASS: import.test
FAIL: ecc.test

PASS: finish.test

27 of 30 tests failed

Please report to http://bugs.gnupg.org

Details

Version
gnupg-2.1.0

Event Timeline

aixtools added a project: Bug Report.
aixtools added a subscriber: aixtools.

Adding make and make check as I see it on screen.

The test write log files for each test. Can you please send or upload
tests/openpgp/version.test.log - that should give a hint what is going
wrong.

I also wonder about some of the diagnostics:

  t-stringhelp.c: In function 'test_strconcat':
  t-stringhelp.c:201:20: warning: missing sentinel in function call  [-Wformat]

If you look at the code

  out = strconcat ("1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
                   "1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
                   "1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
                   "1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
                   "1", "2", "3", "4", "5", "6", "7", NULL);

you see that a sentinel (NULL) is there. From the header files:

  #if __GNUC__ >= 4
  # define GNUPG_GCC_A_SENTINEL(a) __attribute__ ((sentinel(a)))
  #else
  # define GNUPG_GCC_A_SENTINEL(a)
  #endif

  [..]
  /* Concatenate the string S1 with all the following strings up to a
     NULL.  Returns a malloced buffer with the new string or NULL on a
     malloc error or if too many arguments are given.  */
  char *strconcat (const char *s1, ...) GNUPG_GCC_A_SENTINEL(0);

is gcc 4.7.4 known for having such a bug?

michael@x054:[/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0]ln -s tests AIX-tests
michael@x054:[/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0]tar cf -
./AIX-tests/openpgp | bzip2 >AIX-tests_openpgp.tar.bz2
tar: ./AIX-tests/openpgp/S.gpg-agent: socket ignored
michael@x054:[/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0]ls -li
./AIX-tests/openpgp/S.gpg-agent
182715173 srwxrwxrwx 1 root system 0 Dec 03 14:29
./AIX-tests/openpgp/S.gpg-agent

i.e., Sending the whole directory...

re: GCC and bug - as I replied per email. No idea.

Looking at the log files - seems basic error is because there is "No secret key".

Should I have done something before running "make check"?

Some examples:
Test: armencrypt.test
GNUPGHOME=/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp
gpg: two@example.com: skipped: No public key
gpg: plain-1: encryption failed: No public key

Test: armor.test
GNUPGHOME=/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp
armor.test: checking: armored_key_8192
gpg: /data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp/trustdb.gpg: trustdb
created
gpg: key DE415B0E: public key "Susumu OSAWA <susumu-o@goforward.org>" imported
gpg: can't connect to the agent: IPC connect call failed
gpg: Total number processed: 1
gpg: imported: 1
armor.test: the armored_key_8192 bug is back in town

Test: clearsig.test
GNUPGHOME=/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp
gpg: no default secret key: No secret key
gpg: plain-1: clearsign failed: No secret key
...skipping...

Test: conventional-mdc.test
GNUPGHOME=/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp
gpg: IDEA encrypted data
gpg: encrypted with 1 passphrase
...skipping...

Test: conventional.test
GNUPGHOME=/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp
gpg: can't open 'plain-2': No such file or directory
gpg: symmetric encryption of 'plain-2' failed: No such file or directory
...skipping...

Test: decrypt-dsa.test
GNUPGHOME=/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp
gpg: encrypted with ELG key, ID CB879DE9
gpg: decryption failed: No secret key
...skipping...

Test: decrypt.test
GNUPGHOME=/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp
gpg: encrypted with ELG key, ID 47BE2775
gpg: decryption failed: No secret key

Test: decrypt.test
GNUPGHOME=/data/prj/gnu/gcrypt/gnupg/gnupg-2.1.0/tests/openpgp
gpg: encrypted with ELG key, ID 47BE2775
gpg: decryption failed: No secret key

p.s. Not sure of effect of creating the file named socket in the current path -
as it is an NFS-v3 mounted filesystem. If you give a change (to test) that opens
the socket in e.g., /tmp, I can add that and test.

I'll add the logs to the "issue" asap.

re: GCC known for this bug? No idea. I am new to GCC. Could be a bug in my
implementation of GCC - I bootstrapped the compiler myself.

I will try and review "make check" of the compiler output. From memory, it
was not perfect. Neither do I know if a perfect score is expected by gcc
dev or not) (;p guess I don;t know too much)

On Thu, Dec 4, 2014 at 8:52 AM, Werner Koch via BTS <gnupg@bugs.g10code.com>
wrote:

Werner Koch <wk@gnupg.org> added the comment:

The test write log files for each test. Can you please send or upload
tests/openpgp/version.test.log - that should give a hint what is going
wrong.

I also wonder about some of the diagnostics:

t-stringhelp.c: In function 'test_strconcat':
t-stringhelp.c:201:20: warning: missing sentinel in function call

[-Wformat]

If you look at the code

out = strconcat ("1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
                 "1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
                 "1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
                 "1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
                 "1", "2", "3", "4", "5", "6", "7", NULL);

you see that a sentinel (NULL) is there. From the header files:

#if __GNUC__ >= 4
# define GNUPG_GCC_A_SENTINEL(a) __attribute__ ((sentinel(a)))
#else
# define GNUPG_GCC_A_SENTINEL(a)
#endif

[..]
/* Concatenate the string S1 with all the following strings up to a
   NULL.  Returns a malloced buffer with the new string or NULL on a
   malloc error or if too many arguments are given.  */
char *strconcat (const char *s1, ...) GNUPG_GCC_A_SENTINEL(0);

is gcc 4.7.4 known for having such a bug?


g10 Code's BTS <gnupg@bugs.g10code.com>
<T1779>


The GIT version has the change to redirect sockets so to make it wok on shared
and NFS mounted home directories.

You need to prepare a file with this content:

%Assuan%
socket=/what/ever/is/the/real/socket

Exactly two lines, no extra white space. Store this as ~/.gnupg/S.gpg-agent

Lets just say, back again - and trying again with xlC as I am trying to avoid
the requirements for setting up an additional run-time environment to satisfy
all the needs of the GCC compiler on applications built with it.

Unfortunately, I "erased" my gnu+ development notes, so restarting everything.

This is to let you know I am still here :)

AIX required a patch for Npth library for fork.
Please test again with npth 1.3 when it will be released.
I tested with 2.1.14, all go well successfully (make check no errors) with
patched version of Npth library.

gniibe removed a project: Info Needed.
gniibe added a project: Restricted Project.

Will be a week or so. Had to power off my server due to "flooding" nearby.

On Fri, Jul 29, 2016 at 9:56 AM, NIIBE Yutaka via BTS <
gnupg@bugs.g10code.com> wrote:

NIIBE Yutaka <gniibe@fsij.org> added the comment:

AIX required a patch for Npth library for fork.
Please test again with npth 1.3 when it will be released.
I tested with 2.1.14, all go well successfully (make check no errors) with
patched version of Npth library.


assignedto: -> gniibe
nosy: +gniibe
status: need-eg -> testing


GnuPG's BTS <gnupg@bugs.g10code.com>
<T1779>


gniibe removed a project: Restricted Project.

Fixed with nPth 1.3.